<resources>
    <string name="app_name">vTunnel</string>
    <string name="app_version">version:1.5.5</string>
    <string name="form_server">Server</string>
    <string name="form_path">Path</string>
    <string name="form_key">Key</string>
    <string name="form_dns">DNS</string>
    <string name="form_protocol">Protocol</string>
    <string name="form_protocol_ws">ws</string>
    <string name="form_protocol_wss">wss</string>
    <string name="form_obfs">Obfs</string>
    <string name="form_switch_on">On</string>
    <string name="form_switch_off">Off</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_bypass"> BYPASS VPN</string>
    <string name="form_default_server">vpn.your.domain:443</string>
    <string name="form_default_path">/freedom</string>
    <string name="form_default_key">123456</string>
    <string name="form_default_dns">223.5.5.5</string>
    <string name="form_default_obfs">false</string>
    <string name="menu_home">Home</string>
    <string name="menu_configs">Settings</string>
    <string name="menu_apps">Apps</string>
    <string name="msg_success_save">Saved</string>
    <string name="msg_error_server">Invalid server address or key</string>
    <string name="msg_error_server_none">Please add a server</string>
    <string name="msg_error_dns">Invalid DNS</string>
    <string name="msg_vpn_connect_no">Tap To Connect</string>
    <string name="msg_vpn_connect_yes">Network is encrypted</string>
    <string name="msg_vpn_start">Started</string>
    <string name="msg_vpn_stop">Stopped</string>
    <string name="msg_vpn_connecting">Connecting…</string>
    <string name="msg_vpn_working">vTunnel is working…</string>
    <string name="msg_vpn_data_usage">Data Usage</string>
</resources>
