<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.netbyte.vtunnel.activity.ConfigsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/ServerView"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_server"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editServer"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/form_default_server"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/KeyView"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_key"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editKey"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/form_default_key"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/DNSView"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_dns"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editDNS"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/form_default_dns" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/saveConfigBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/ObfuscationView"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_obfs"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/obfsSwitch"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:textOff="@string/form_switch_off"
                android:textOn="@string/form_switch_on"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveConfigBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
